fix: dark mode styles for all necessary pages

--- a/src/styles/tailwind/output.css
+++ b/src/styles/tailwind/output.css
@@ -948,6 +948,21 @@
       background-color: var(--color-gray-800);
     }
   }
+  .dark\:text-gray-200 {
+    .dark & {
+      color: var(--color-gray-200);
+    }
+  }
+  .dark\:text-gray-300 {
+    .dark & {
+      color: var(--color-gray-300);
+    }
+  }
+  .dark\:text-gray-400 {
+    .dark & {
+      color: var(--color-gray-400);
+    }
+  }
   .dark\:text-orange-300 {
     .dark & {
       color: var(--color-orange-300);
